# Summer_Task_2026

./: .env.example  .gitignore  1stOrder.md  README.md  SYSTEM_STATE.md  docker-compose.yaml  pyproject.toml
api/: Dockerfile  README.md  seed_requests.http
api/openapi/: swagger.yaml
api/src/: main.py
api/src/api/impl/: base_api_impl.py  default_api_impl.py
api/src/common/: __init__.py
api/src/control/: temperature_control.py
api/src/control/exception/: temperature_not_found_exception.py
api/src/dao/: __init__.py
api/src/dao/exception/: db_exception.py
api/src/dao/manager/: db_connection_manager.py  postgresql_manager_impl.py
api/tests/: test_temperature_control.py  test_temperature_log_repository.py
api/tests/resources/: schema.sql
api/tests/tools/: seed_requests.py
db/: seed_temperature_logs.sql  setup.sql  setup_tables.sql
grafana/dashboards/: temperature-logs.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: postgresql.yaml
iot/: .gitignore  README.md  platformio.ini
iot/include/: README
iot/lib/: README
iot/src/: main.cpp
iot/test/: README
iot/test/test_native/: test_main.cpp
openapi/: swagger.yaml
src/: main.py
src/api/impl/: __init__.py  default_api_impl.py
src/control/: temperature_control.py
src/control/exception/: __init__.py  business_exception.py
src/dao/exception/: __init__.py
src/dao/repository/: temperature_log_repository.py
tests/: README.md  test_temperature_log_repository.py
tests/resources/: test_data.sql
tests/tools/: seed_via_api.py
(+20 files in other folders)
